nav bar spacings fixed

--- a/categories_style.css
+++ b/categories_style.css
@@ -124,6 +124,7 @@ button:hover {
 .new-category {
 	button {
 		margin: 10px;
+		margin-bottom: 23px;
 		background-color: white;
 		width: 370px;
 		height: 45px;
